--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,8 @@ header {
   height: 100%;
   overflow: auto;
   position: relative;
-  background: url(../images/mainimg.jpg) no-repeat center center / cover;
+/*   background: url(../images/mainimg.jpg) no-repeat center center / cover; */
+background: url(portfolio-1/images/mainimg.jpg) no-repeat center center / cover;
 }
 #menubar {
   position: absolute;
