--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header {
   overflow: auto;
   position: relative;
 /*   background: url(../images/mainimg.jpg) no-repeat center center / cover; */
-background: url(https://mirai2021.github.io-1/images/mainimg.jpg) no-repeat center center / cover;
+background: url(https://mirai2021.github.io/portfolio-1/mainimg.jpg) no-repeat center center / cover;
 }
 #menubar {
   position: absolute;
